--- a/db/narratives/ec_anika.yml
+++ b/db/narratives/ec_anika.yml
@@ -1,7 +1,8 @@
 ---
 - !ruby/object:Week_
   week_num: 1
-  text: |
+  text_ko:  
+  text_en: |
     <p> In group time, we began by setting up weekly team meetings. My group
     members seem to be nice. One of my teammates, Alex, I recognized from one
     of our big lecture courses last semester. One of the others, Lionel, is a
@@ -28,7 +29,8 @@
 
 - !ruby/object:Week_
   week_num: 2
-  text: |
+  text_ko:  
+  text_en: |
     <p> Alex, Lionel and Natasha all focused on the same two topics, and
     everyone agreed that the topic I'd done the most work on wasn't really
     viable. We ended up with a lot of duplication &mdash; especially between
@@ -58,7 +60,8 @@
 
 - !ruby/object:Week_
   week_num: 3
-  text: |
+  text_ko:  
+  text_en: |
     <p> During our meeting, we began sorting through the materials. Lionel's
     and Natasha's materials were in good shape. Natasha made me laugh when she
     misread one of my summaries and shone a completely different light on it.
@@ -87,7 +90,8 @@
 
 - !ruby/object:Week_
   week_num: 4
-  text: |
+  text_ko:  
+  text_en: |
     <p> My mom has been ill for some time, and I found out that she was in
     hospital, so I drove back home to see her. The doctors took two days to
     figure out what it was and it wound up a false alarm. I headed back to
@@ -101,7 +105,8 @@
 
 - !ruby/object:Week_
   week_num: 5
-  text: |
+  text_ko:  
+  text_en: |
     <p> Lionel turned in our assignment this week in class, and our instructor
     gave us some time to meet as a group. We spent the time looking at the
     outline Alex put together, since no one else had brought anything with
@@ -131,7 +136,8 @@
 
 - !ruby/object:Week_
   week_num: 6
-  text: |
+  text_ko:  
+  text_en: |
     <p> I was right &mdash; no one was really able to make the pieces work
     quite right, so we had to rethink our approach. When I asked that we look
     at my idea from last week again, though, Alex had also been thinking about
@@ -159,7 +165,8 @@
 
 - !ruby/object:Week_
   week_num: 7
-  text: |
+  text_ko:  
+  text_en: |
     <p> Everyone else was late for our meeting this week. I guess that they all
     had mid-term study sessions today, and they all forgot to mention it last
     week. Kind of annoying, but there was nothing to be done about it. Alex
@@ -192,7 +199,8 @@
 
 - !ruby/object:Week_
   week_num: 8
-  text: |
+  text_ko:  
+  text_en: |
     <p> While Alex may not be good at making sure he puts all the right detail
     in himself, he is good at making sure everyone else does. He found all
     sorts of issues all over the paper &mdash; much more than I found. There
@@ -230,7 +238,8 @@
 
 - !ruby/object:Week_
   week_num: 9
-  text: |
+  text_ko:  
+  text_en: |
     <p> We were happy to have copies to look at, but our instructor didn't give
     us any group time in class, so it wasn't as helpful as I'd hoped it would
     be. It did mean we didn't need to waste our meeting time on reading through
@@ -266,7 +275,8 @@
 
 - !ruby/object:Week_
   week_num: 10
-  text: |
+  text_ko:  
+  text_en: |
     <p> Everyone's presentations were pretty good, except for Lionel's. I don't
     know what was going on there! It looked like this was his first time
     building a PowerPoint, and he spent all his time playing with his new toy!
@@ -294,12 +304,14 @@
 
 - !ruby/object:Week_
   week_num: 11
-  text: |
+  text_ko:  
+  text_en: |
     <p> In class, the instructor returned the drafts, and we met briefly during
     class to review it. There weren't many comments. Most of them were pretty
     minor or issues that Natasha had already fixed. There was one comment that
     concerned us all, though: a diagram might help here. We were presenting our
-    instructor with a great big wall of text! How did we miss that? We'd
+    instructor with a great big wall of text_ko:  
+    text_en! How did we miss that? We'd
     definitely have things to talk about at this week's team meeting. </p>
 
     <p> Lionel arrived a bit late as we were talking about our complete lack of
@@ -335,7 +347,8 @@
 
 - !ruby/object:Week_
   week_num: 12
-  text: |
+  text_ko:  
+  text_en: |
     <p> Lionel's images really added a lot to our paper. They would really make
     it easier for people to understand parts of it. Lionel also claimed one of
     the images for one of his slides. It worked much better than the bullet
@@ -360,7 +373,8 @@
 
 - !ruby/object:Week_
   week_num: 13
-  text: |
+  text_ko:  
+  text_en: |
     <p> The presentation went OK, but not quite as smoothly as I'd hoped. Alex
     seemed nervous and got quieter than I'd have liked, but I'm pretty sure
     that most people heard him. They told me that, despite my efforts to avoid
@@ -389,7 +403,8 @@
 
 - !ruby/object:Week_
   week_num: 14
-  text: |
+  text_ko:  
+  text_en: |
     <p> At the final meeting, we reviewed the paper to make sure it was ready
     for submission at the end of the week. As we went through it, I took issue
     with a few of the changes Alex made. The language he used was a bit
