--- a/db/narratives/sl_hannah.yml
+++ b/db/narratives/sl_hannah.yml
@@ -1,7 +1,8 @@
 ---
 - !ruby/object:Week_
   week_num: 1
-  text: |
+  text_ko:    
+  text_en: |
     <p> In group time the first week, we began by setting up weekly team
     meetings. The project is fairly open-ended, so we brainstormed topic ideas
     for the rest of the time. </p>
@@ -29,7 +30,8 @@
 
 - !ruby/object:Week_
   week_num: 2
-  text: |
+  text_ko:    
+  text_en: |
     <p> When I arrived, I felt uncomfortable because everyone had long lists of
     what they found and I had so little to offer. I asked how everyone found so
     much &mdash; especially Iain. He found so much more than I did on the same
@@ -60,7 +62,8 @@
 
 - !ruby/object:Week_
   week_num: 3
-  text: |
+  text_ko:    
+  text_en: |
     <p> This week, we began sorting through the materials we'd all found.
     Together, Iain and I had easily the best materials and summaries to offer.
     Very little time needed to be spent covering our work because there weren't
@@ -83,7 +86,8 @@
 
 - !ruby/object:Week_
   week_num: 4
-  text: |
+  text_ko:    
+  text_en: |
     <p> I slipped on some ice on my way to class and had to be rushed to the
     hospital to set a broken bone and get some stitches &mdash; it was pretty
     bad. They gave me some painkillers and I didn't react well to them. I
@@ -96,7 +100,8 @@
 
 - !ruby/object:Week_
   week_num: 5
-  text: |
+  text_ko:    
+  text_en: |
     <p> I didn't get to class, but I understand that John turned in the
     assignment for us. I was able to make it to the meeting this week and,
     naturally, everyone was surprised to see my cast. They were even more
@@ -131,7 +136,8 @@
 
 - !ruby/object:Week_
   week_num: 6
-  text: |
+  text_ko:    
+  text_en: |
     <p> Iain was in class this week, but he emailed the team about an hour and
     a half before the meeting to say that there was a family emergency and that
     he would not be able to make it to the meeting. He sent over his progress
@@ -158,7 +164,8 @@
 
 - !ruby/object:Week_
   week_num: 7
-  text: |
+  text_ko:    
+  text_en: |
     <p> I gave everyone a copy of the document I'd assembled when we started
     our meeting. After about 15 minutes of what was scheduled to be a 30-minute
     meeting, Iain had not arrived, so we decided to walk through the document
@@ -188,7 +195,8 @@
 
 - !ruby/object:Week_
   week_num: 8
-  text: |
+  text_ko:    
+  text_en: |
     <p> Iain was already there when I arrived at the meeting this week. Marie
     has got a great eye for detail, as she found a ton of spelling and
     formatting errors that everyone else missed. I volunteered to take
@@ -209,7 +217,8 @@
 
 - !ruby/object:Week_
   week_num: 9
-  text: |
+  text_ko:    
+  text_en: |
     <p> I forgot to provide copies to everyone before class and they seemed
     upset about it, but I did have one to turn in to the instructor. Now we get
     to wait for feedback. We do, however, already know of some work that needs
@@ -231,7 +240,8 @@
 
 - !ruby/object:Week_
   week_num: 10
-  text: |
+  text_ko:    
+  text_en: |
     <p> As I was on my way to the meeting, I heard from Iain. He told me that
     he'd just got free, front-row tickets to the game tonight, so he wouldn't
     be coming to our meeting. I can't believe he skipped another meeting, but
@@ -260,7 +270,8 @@
 
 - !ruby/object:Week_
   week_num: 11
-  text: |
+  text_ko:    
+  text_en: |
     <p> In class, our instructor returned the drafts to the groups and we met
     briefly during class to review it. Unfortunately, while we knew there were
     lots of problems with that version, the instructor only left five comments
@@ -303,7 +314,8 @@
 
 - !ruby/object:Week_
   week_num: 12
-  text: |
+  text_ko:    
+  text_en: |
     <p> Everyone arrived on time for the meeting this week. </p>
 
     <p> Iain provided feedback on Marie's section and, in reading through it,
@@ -332,7 +344,8 @@
 
 - !ruby/object:Week_
   week_num: 13
-  text: |
+  text_ko:    
+  text_en: |
     <p> The presentation went very smoothly. I was nervous, but I knew what I
     was talking about and I think that showed. The audience asked some good
     questions, which meant that they understood the presentation.  For some
@@ -358,7 +371,8 @@
 
 - !ruby/object:Week_
   week_num: 14
-  text: |
+  text_ko:    
+  text_en: |
     <p> At our final meeting, we reviewed the paper to make sure it was ready
     for submission at the end of the week. Iain volunteered to do a final read,
     print the document and send it to the instructor. Marie started to attack
